--- a/404.md
+++ b/404.md
@@ -5,4 +5,6 @@ permalink: /404.html
 # 404 -_-
 You have reached, not a web page, not my website, but NOTHING!!!
 
-Go back now
+![discord faceplam emote](https://cdn.discordapp.com/emojis/708053002719854632.png?v=1)
+
+# Go back now
