--- a/404.md
+++ b/404.md
@@ -7,4 +7,4 @@ You have reached, not a web page, not my website, but NOTHING!!!
 
 ![discord faceplam emote](https://cdn.discordapp.com/emojis/708053002719854632.png?v=1)
 
-# Go back now
+[Go back now](https://rstar284.tk)
