--- a/404.md
+++ b/404.md
@@ -1,6 +1,6 @@
-# 404 -_-
-You have reached, not a web page, not my website, but NOTHING!!!
+# 404 TmT
+You have weached, not a web page :(, not my website OmO, but NOTHING nya~!!!
 
-![discord faceplam emote](https://cdn.discordapp.com/emojis/708053002719854632.png?v=1)
+![discord faceplam emote uwu](https://cdn.discordapp.com/emojis/708053002719854632.png?v=1)
 
 [Go back now](https://rstar284.tk)
